# libvmod-i18n

./: .gitignore  .travis.yml  LICENSE  README.md  configure.ac
src/: Makefile.am  vmod.vcc  vmod_i18n.c
src/tests/: b00000.vtc  b00001.vtc  b00002.vtc  b00003.vtc  b00004.vtc  b00005.vtc  b00006.vtc  b00007.vtc  b00010.vtc  b00020.vtc
